--- a/salon_services.html
+++ b/salon_services.html
@@ -145,7 +145,7 @@ footer div.center{
         </div>
         <div class="mid">
             <ul class="navbar">
-                <li><a href="salon_home.html" >Home</a></li>
+                <li><a href="index.html" >Home</a></li>
                 <li><a href="salon_about.html">About Us</a></li>
                 <li><a href="salon_services.html" class="active">Our Services</a></li>
                 <li><a href="salon_contact.html">Contact Us</a></li>
