--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ footer div.center{
         </div>
         <div class="mid">
             <ul class="navbar">
-                <li><a href="salon_home.html" class="active" >Home</a></li>
+                <li><a href="index.html" class="active" >Home</a></li>
                 <li><a href="salon_about.html">About Us</a></li>
                 <li><a href="salon_services.html">Our Services</a></li>
                 <li><a href="salon_contact.html">Contact Us</a></li>
