--- a/salon_contact.html
+++ b/salon_contact.html
@@ -31,7 +31,7 @@
     }
 
 section#imgbody{
-    background-image: url('salon.jpg') ;
+    background-image: url('Salon.jpg') ;
     background-repeat: no-repeat;
     background-size: cover;
     content: "";
